--- a/index.html
+++ b/index.html
@@ -12,17 +12,50 @@
 </head>
 
 <body>
-  <header>
-
-  </header>
-
-  <div class="main uk-container">
-
+  <div class="grayhead">
+    <div class="uk-container">
+      <header class="uk-text-right">
+        <span class="worktime">Без выходных с 9.00 до 22.00</span>
+        <span class="phonenumber">8 (925) 700 50 60</span>
+        <a href="#modal-call" class="uk-button uk-button-orange" uk-toggle>Заказать звонок</a>
+      </header>
+      <div class="info uk-text-center">
+          <nav class="uk-navbar-container uk-navbar-transparent uk-text-left" uk-navbar>
+            <div class="uk-navbar-center">
+                <ul class="uk-navbar-nav">
+                    <li><a href="#">Процесс работ</a></li>
+                    <li><a href="#">Достоинства</a></li>
+                    <li><a href="#">Виды работ</a></li>
+                    <li><a href="#">Цены</a></li>
+                    <li><a href="#">О компании</a></li>
+                    <li><a href="#">Результаты</a></li>
+                    <li><a href="#">Контакты</a></li>
+                </ul>
+            </div>
+          </nav>
+          <h1>Полусухая стяжка пола</h1>
+          <p class="uk-margin-remove-top uk-margin-medium-bottom">по<i class="deutsch"></i>немецкой технологии</p>
+          <form class="form_type-1">
+            <legend>Укажите ваш контактный телефон - мастер перезвонит вам в течении 5 минут</legend>
+            <div class="uk-grid uk-grid-small uk-child-width-1-2@s uk-margin-top" uk-grid>
+              <div>
+                <input class="uk-input" name="grayhead_phone" placeholder="+7 927 123-45-67" />
+              </div>
+              <div>
+                <button type="submit" class="uk-button uk-button-tea uk-width-1-1">Отправить заявку</button>
+              </div>
+            </div>
+          </form>
+      </div>
+    </div>
+    <div class="uk-container">
+      <div class="advantages uk-grid uk-grid-small uk-child-width-1-3 uk-flex-center uk-flex-middle uk-text-center" uk-grid>
+        <div><span>2 года гарантия на пол</span></div>
+        <div><span>Стоимость от 420 руб за кв. м.</span></div>
+        <div><span>Работаем по договору</span></div>
+      </div>
+    </div>
   </div>
-
-  <footer>
-
-  </footer>
 
   <div class="scripts uk-hidden">
       <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.2/js/uikit.min.js"></script>
