last large update

--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
 <body>
   <div class="grayhead">
     <div class="uk-container">
-      <header class="uk-text-right">
-        <span class="worktime">Без выходных с 9.00 до 22.00</span>
-        <span class="phonenumber">8 (925) 700 50 60</span>
-        <a href="#modal-call" class="uk-button uk-button-orange" uk-toggle>Заказать звонок</a>
+      <header>
+        <div class="uk-grid uk-grid-small uk-child-width-auto uk-flex-middle uk-flex-right" uk-grid>
+          <div><span class="worktime">Без выходных с 9.00 до 22.00</span></div>
+          <div><a href="tel:89257005060" class="phonenumber">8 (925) 700 50 60</a></div>
+          <div><a href="#modal-call" class="uk-button uk-button-orange" uk-toggle>Заказать звонок</a></div>
+        </div>
       </header>
       <div class="info uk-text-center">
           <nav class="uk-navbar-container uk-navbar-transparent uk-text-left" uk-navbar>
@@ -491,21 +493,305 @@
             <a href="#" class="uk-link-blue">Отзыв клиента</a>
             <div class="uk-grid uk-grid-small uk-flex-middle" uk-grid>
               <div class="uk-width-expand price">Стоимость работы ~ 15 000₽</div>
-              <div class="uk-width-auto"><a href="#modal-call" title="Заказать так же" class="uk-button uk-button-tea">Заказать так же</a></div>
+              <div class="uk-width-auto"><a href="#modal-call" title="Заказать так же" class="uk-button uk-button-tea-inverse">Заказать так же</a></div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div>
+        <div class="wrapper">
+          <div class="uk-position-relative" uk-slideshow="animation: push;autoplay:true">
+            <div class="uk-position-relative uk-visible-toggle">
+              <ul class="uk-slideshow-items" uk-lightbox="animation: slide">
+                <li>
+                    <a href="img/results/results-2.jpg" class="uk-display-block">
+                        <img src="img/results/results-2.jpg" alt="" uk-cover>
+                    </a>
+                </li>
+                <li>
+                    <a href="img/results/results-1.jpg" class="uk-display-block">
+                        <img src="img/results/results-1.jpg" alt="" uk-cover>
+                    </a>
+                </li>
+                <li>
+                    <a href="img/results/results-3.jpg" class="uk-display-block">
+                        <img src="img/results/results-3.jpg" alt="" uk-cover>
+                    </a>
+                </li>
+                <li>
+                    <a href="img/results/results-1.jpg" class="uk-display-block">
+                        <img src="img/results/results-1.jpg" alt="" uk-cover>
+                    </a>
+                </li>
+                <li>
+                    <a href="img/results/results-4.jpg" class="uk-display-block">
+                        <img src="img/results/results-4.jpg" alt="" uk-cover>
+                    </a>
+                </li>
+              </ul>
+            </div>
+            <div class="uk-width-1-1 uk-position-bottom uk-light">
+              <ul class="uk-slideshow-nav uk-dotnav uk-flex-center uk-grid uk-grid-small uk-child-width-1-5"></ul>
+            </div>
+          </div>
+          <div class="info">
+            <h3 class="uk-margin-remove-bottom">Стяжка поля в квартире</h3>
+            <p class="after-h3 uk-margin-remove-top">Нахабино</p>
+            <p>Была произведена полусухая стяжка пола в квартире. Работы проводились на первом и втором этажах. Весь объем работ составил 250 кв. м. и был выполнен в течение 1 дня.</p>
+            <a href="#" class="uk-link-blue">Отзыв клиента</a>
+            <div class="uk-grid uk-grid-small uk-flex-middle" uk-grid>
+              <div class="uk-width-expand price">Стоимость работы ~ 15 000₽</div>
+              <div class="uk-width-auto"><a href="#modal-call" title="Заказать так же" class="uk-button uk-button-tea-inverse">Заказать так же</a></div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div>
+        <div class="wrapper">
+          <div class="uk-position-relative" uk-slideshow="animation: push;autoplay:true">
+            <div class="uk-position-relative uk-visible-toggle">
+              <ul class="uk-slideshow-items" uk-lightbox="animation: slide">
+                <li>
+                    <a href="img/results/results-3.jpg" class="uk-display-block">
+                        <img src="img/results/results-3.jpg" alt="" uk-cover>
+                    </a>
+                </li>
+                <li>
+                    <a href="img/results/results-1.jpg" class="uk-display-block">
+                        <img src="img/results/results-1.jpg" alt="" uk-cover>
+                    </a>
+                </li>
+                <li>
+                    <a href="img/results/results-2.jpg" class="uk-display-block">
+                        <img src="img/results/results-2.jpg" alt="" uk-cover>
+                    </a>
+                </li>
+                <li>
+                    <a href="img/results/results-1.jpg" class="uk-display-block">
+                        <img src="img/results/results-1.jpg" alt="" uk-cover>
+                    </a>
+                </li>
+                <li>
+                    <a href="img/results/results-4.jpg" class="uk-display-block">
+                        <img src="img/results/results-4.jpg" alt="" uk-cover>
+                    </a>
+                </li>
+              </ul>
+            </div>
+            <div class="uk-width-1-1 uk-position-bottom uk-light">
+              <ul class="uk-slideshow-nav uk-dotnav uk-flex-center uk-grid uk-grid-small uk-child-width-1-5"></ul>
+            </div>
+          </div>
+          <div class="info">
+            <h3 class="uk-margin-remove-bottom">Стяжка поля в коттедже</h3>
+            <p class="after-h3 uk-margin-remove-top">Новая Рига</p>
+            <p>Была произведена полусухая стяжка пола в квартире. Работы проводились на первом и втором этажах. Весь объем работ составил 250 кв. м. и был выполнен в течение 1 дня.</p>
+            <a href="#" class="uk-link-blue">Отзыв клиента</a>
+            <div class="uk-grid uk-grid-small uk-flex-middle" uk-grid>
+              <div class="uk-width-expand price">Стоимость работы ~ 15 000₽</div>
+              <div class="uk-width-auto"><a href="#modal-call" title="Заказать так же" class="uk-button uk-button-tea-inverse">Заказать так же</a></div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div>
+        <div class="wrapper">
+          <div class="uk-position-relative" uk-slideshow="animation: push;autoplay:true">
+            <div class="uk-position-relative uk-visible-toggle">
+              <ul class="uk-slideshow-items" uk-lightbox="animation: slide">
+                <li>
+                    <a href="img/results/results-1.jpg" class="uk-display-block">
+                        <img src="img/results/results-1.jpg" alt="" uk-cover>
+                    </a>
+                </li>
+                <li>
+                    <a href="img/results/results-2.jpg" class="uk-display-block">
+                        <img src="img/results/results-2.jpg" alt="" uk-cover>
+                    </a>
+                </li>
+                <li>
+                    <a href="img/results/results-3.jpg" class="uk-display-block">
+                        <img src="img/results/results-3.jpg" alt="" uk-cover>
+                    </a>
+                </li>
+                <li>
+                    <a href="img/results/results-1.jpg" class="uk-display-block">
+                        <img src="img/results/results-1.jpg" alt="" uk-cover>
+                    </a>
+                </li>
+                <li>
+                    <a href="img/results/results-4.jpg" class="uk-display-block">
+                        <img src="img/results/results-4.jpg" alt="" uk-cover>
+                    </a>
+                </li>
+              </ul>
+            </div>
+            <div class="uk-width-1-1 uk-position-bottom uk-light">
+              <ul class="uk-slideshow-nav uk-dotnav uk-flex-center uk-grid uk-grid-small uk-child-width-1-5"></ul>
+            </div>
+          </div>
+          <div class="info">
+            <h3 class="uk-margin-remove-bottom">Стяжка поля в коттедже</h3>
+            <p class="after-h3 uk-margin-remove-top">Долгопрудный</p>
+            <p>Была произведена полусухая стяжка пола в квартире. Работы проводились на первом и втором этажах. Весь объем работ составил 250 кв. м. и был выполнен в течение 1 дня.</p>
+            <a href="#" class="uk-link-blue">Отзыв клиента</a>
+            <div class="uk-grid uk-grid-small uk-flex-middle" uk-grid>
+              <div class="uk-width-expand price">Стоимость работы ~ 15 000₽</div>
+              <div class="uk-width-auto"><a href="#modal-call" title="Заказать так же" class="uk-button uk-button-tea-inverse">Заказать так же</a></div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div>
+        <div class="wrapper">
+          <div class="uk-position-relative" uk-slideshow="animation: push;autoplay:true">
+            <div class="uk-position-relative uk-visible-toggle">
+              <ul class="uk-slideshow-items" uk-lightbox="animation: slide">
+                <li>
+                    <a href="img/results/results-1.jpg" class="uk-display-block">
+                        <img src="img/results/results-1.jpg" alt="" uk-cover>
+                    </a>
+                </li>
+                <li>
+                    <a href="img/results/results-2.jpg" class="uk-display-block">
+                        <img src="img/results/results-2.jpg" alt="" uk-cover>
+                    </a>
+                </li>
+                <li>
+                    <a href="img/results/results-3.jpg" class="uk-display-block">
+                        <img src="img/results/results-3.jpg" alt="" uk-cover>
+                    </a>
+                </li>
+                <li>
+                    <a href="img/results/results-1.jpg" class="uk-display-block">
+                        <img src="img/results/results-1.jpg" alt="" uk-cover>
+                    </a>
+                </li>
+                <li>
+                    <a href="img/results/results-4.jpg" class="uk-display-block">
+                        <img src="img/results/results-4.jpg" alt="" uk-cover>
+                    </a>
+                </li>
+              </ul>
+            </div>
+            <div class="uk-width-1-1 uk-position-bottom uk-light">
+              <ul class="uk-slideshow-nav uk-dotnav uk-flex-center uk-grid uk-grid-small uk-child-width-1-5"></ul>
+            </div>
+          </div>
+          <div class="info">
+            <h3 class="uk-margin-remove-bottom">Стяжка поля в коттедже</h3>
+            <p class="after-h3 uk-margin-remove-top">р-н аэропорта Внуково</p>
+            <p>Была произведена полусухая стяжка пола в квартире. Работы проводились на первом и втором этажах. Весь объем работ составил 250 кв. м. и был выполнен в течение 1 дня.</p>
+            <a href="#" class="uk-link-blue">Отзыв клиента</a>
+            <div class="uk-grid uk-grid-small uk-flex-middle" uk-grid>
+              <div class="uk-width-expand price">Стоимость работы ~ 15 000₽</div>
+              <div class="uk-width-auto"><a href="#modal-call" title="Заказать так же" class="uk-button uk-button-tea-inverse">Заказать так же</a></div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div>
+        <div class="wrapper">
+          <div class="uk-position-relative" uk-slideshow="animation: push;autoplay:true">
+            <div class="uk-position-relative uk-visible-toggle">
+              <ul class="uk-slideshow-items" uk-lightbox="animation: slide">
+                <li>
+                    <a href="img/results/results-1.jpg" class="uk-display-block">
+                        <img src="img/results/results-1.jpg" alt="" uk-cover>
+                    </a>
+                </li>
+                <li>
+                    <a href="img/results/results-2.jpg" class="uk-display-block">
+                        <img src="img/results/results-2.jpg" alt="" uk-cover>
+                    </a>
+                </li>
+                <li>
+                    <a href="img/results/results-3.jpg" class="uk-display-block">
+                        <img src="img/results/results-3.jpg" alt="" uk-cover>
+                    </a>
+                </li>
+                <li>
+                    <a href="img/results/results-1.jpg" class="uk-display-block">
+                        <img src="img/results/results-1.jpg" alt="" uk-cover>
+                    </a>
+                </li>
+                <li>
+                    <a href="img/results/results-4.jpg" class="uk-display-block">
+                        <img src="img/results/results-4.jpg" alt="" uk-cover>
+                    </a>
+                </li>
+              </ul>
+            </div>
+            <div class="uk-width-1-1 uk-position-bottom uk-light">
+              <ul class="uk-slideshow-nav uk-dotnav uk-flex-center uk-grid uk-grid-small uk-child-width-1-5"></ul>
+            </div>
+          </div>
+          <div class="info">
+            <h3 class="uk-margin-remove-bottom">Стяжка поля в коттедже</h3>
+            <p class="after-h3 uk-margin-remove-top">р-н аэропорта Внуково</p>
+            <p>Была произведена полусухая стяжка пола в квартире. Работы проводились на первом и втором этажах. Весь объем работ составил 250 кв. м. и был выполнен в течение 1 дня.</p>
+            <a href="#" class="uk-link-blue">Отзыв клиента</a>
+            <div class="uk-grid uk-grid-small uk-flex-middle" uk-grid>
+              <div class="uk-width-expand price">Стоимость работы ~ 15 000₽</div>
+              <div class="uk-width-auto"><a href="#modal-call" title="Заказать так же" class="uk-button uk-button-tea-inverse">Заказать так же</a></div>
             </div>
           </div>
         </div>
       </div>
     </div>
+    <a href="#" class="showmore uk-button uk-button-white uk-width-1-1 uk-margin-medium-top">Показать еще</a>
   </div>
 
-
-
+  <footer class="uk-grid uk-grid-collapse uk-child-width-1-2@s" uk-grid>
+    <div class="wrapper">
+      <div class="info">
+        <span class="title">Контакты</span>
+        <p>Есть вопрос? Свяжитесь с нами!</p>
+        <div class="icon">
+          <div>
+            <img src="img/footer/icon-1.png" alt="" width="55" height="55" />
+            <p>105064 г. Москва, ул. Казакова, д.16, стр.2<br/>Без выходных с 9.00 до 22.00</p>
+          </div>
+          <div>
+            <img src="img/footer/icon-2.png" alt="" width="55" height="55" />
+            <p class="uk-margin-small-right">+7 (925) 700-50-60</p>
+            <a href="#modal-call" class="uk-button uk-button-grey">Заказать звонок</a>
+          </div>
+          <div>
+            <img src="img/footer/icon-3.png" alt="" width="55" height="55" />
+            <p>styazhkaprof@yandex.ru</p>
+          </div>
+        </div>
+        <div class="copyright uk-margin-medium-top">
+          <div class="uk-display-block">© 2018 Все права защищены.</div>
+          <a href="marweb.info" class="uk-margin-right">Разработка — <span>Marsweb</span></a>
+          <a href="#">Помощь в запуске <span>Кружок</span></a>
+        </div>
+      </div>
+    </div>
+    <div>
+      <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Ae84cad14aadcb748725d4415c06fccd2e68b1daa96c407c54b29cf011dd95d95&amp;width=100%25&amp;height=100%25&amp;lang=ru_RU&amp;scroll=true"></script>
+    </div>
+  </footer>
 
   <div class="scripts uk-hidden">
       <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.2/js/uikit.min.js"></script>
       <script src="js/uikit-icons.min.js"></script>
       <script src="js/all.js"></script>
+  </div>
+
+  <div id="modal-call" uk-modal>
+    <div class="uk-modal-dialog uk-modal-body uk-text-center">
+      <form>
+        <span class="uk-modal-title">Оставить заявку</span>
+        <p class="uk-margin-small-top">Укажите ваши контактные данные - мастер перезвонить вам в течение 5 минут</p>
+        <div class="uk-grid uk-grid-small uk-child-width-1-2@s" uk-grid>
+          <div><input class="uk-input" placeholder="Ваше имя" name="modal_name"/></div>
+          <div><input class="uk-input" placeholder="+7 927 123-45-67" name="modal_phone"/></div>
+          <div class="uk-width-1-1"><button class="uk-width-1-1 uk-button uk-button-tea" type="submit">Отправить заявку</button></div>
+        </div>
+      </form>
+    </div>
   </div>
 </body>
 </html>
