add form js + php

--- a/index.html
+++ b/index.html
@@ -789,13 +789,13 @@
   <div id="modal-call" uk-modal>
     <div class="uk-modal-dialog uk-modal-body uk-text-center">
       <button class="uk-modal-close-default" type="button" uk-close></button>
-      <form>
+      <form action="" method="get" name="form-1">
         <span class="uk-modal-title">Оставить заявку</span>
         <p class="uk-margin-small-top">Укажите ваши контактные данные - мастер перезвонить вам в течение 5 минут</p>
         <div class="uk-grid uk-grid-small uk-child-width-1-2@s" uk-grid>
           <div><input class="uk-input" placeholder="Ваше имя" name="modal_name"/></div>
           <div><input class="uk-input" placeholder="+7 927 123-45-67" name="modal_phone"/></div>
-          <div class="uk-width-1-1"><button class="uk-width-1-1 uk-button uk-button-tea" type="submit">Отправить заявку</button></div>
+          <div class="uk-width-1-1"><input class="uk-width-1-1 uk-button uk-button-tea feedback" type="button" value="Отправить заявку" /></div>
         </div>
       </form>
     </div>
@@ -803,7 +803,7 @@
 
   <!--Этот быдлокод надо будет убрать-->
   <div class="uk-container uk-position-relative uk-hidden">
-    <form class="form_type-2">
+    <form class="form_type-2"  action="" method="get" name="form-1">
         <div class="uk-grid uk-grid-small uk-child-width-1-2 uk-flex-middle" uk-grid>
           <div>
             <input type="text" name="ourprices" class="uk-margin-small-bottom" placeholder="Ваше имя" />
@@ -815,9 +815,18 @@
       </form>
   </div>
 
+  <div id="modal-success" uk-modal="" class="uk-modal">
+    <div class="uk-modal-dialog uk-modal-body uk-text-center">
+        <span class="uk-modal-title">Спасибо</span>
+        <p>Ваше сообщение было успешно отправлено! Ожидайте звонка менеджера.</p>
+    </div>
+  </div>
+
   <div class="scripts uk-hidden">
       <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.2/js/uikit.min.js"></script>
       <script src="js/uikit-icons.min.js"></script>
+      <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+      <script src="feedback/js/feedback.js"></script>
       <script src="js/all.js"></script>
   </div>
 </body>
